--- a/.github/workflows/checkmarx-one.yml
+++ b/.github/workflows/checkmarx-one.yml
@@ -18,6 +18,8 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
     branches: [ "apisec_v8.2.1" ]
+    
+  workflow_dispatch:
 
 permissions:
   contents: read
